--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
   "bugs": {
     "url": "https://github.com/AnyVisionltd/anv-ui-style-guide/issues"
   },
-  "homepage": "https://github.com/AnyVisionltd/anv-ui-style-guide#readme"
+  "homepage": "https://github.com/AnyVisionltd/anv-ui-style-guide#readme",
+  "scripts": {
+    "test": ""
+  }
 }
