--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "anv-ui-style-guide",
+  "name": "@anyvision/style-guide",
   "version": "1.0.0",
   "description": "",
   "main": "index.scss",
