--- a/.github/workflows/whitesource.yml
+++ b/.github/workflows/whitesource.yml
@@ -6,8 +6,8 @@ on:
     - cron: '0 23 * * *'
  #push:
    # branches: [ development ]
-  pull_request:
-    branches: [ development ]
+  #pull_request:
+    #branches: [ development ]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
